--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
         <link href='https://fonts.googleapis.com/css?family=Droid+Serif|Open+Sans:400,700' rel='stylesheet' type='text/css'>
         <script>
             window.onload = function() {
-               document.getElementById("firstCard").style.background() = "";
+               document.getElementById("firstCard").style.background ="#141E30";
+               document.getElementById("firstTitle").style.color ="#fff";
+               document.getElementById("firstParagraph").style.color ="#fff";
 
                 document.getElementById("button").style.background='none';
                 document.getElementById("button").style.border='none';
@@ -134,8 +136,8 @@
                                         <span class="ti-face-smile gradient-fill ti-3x mr-3"></span>
 
                                         <div class="media-body" >
-                                            <h4 class="card-title" >Programming Sequence</h4>
-                                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer rutrum, urna eu pellentesque </p>
+                                            <h4 id = "firstTitle" class="card-title" >Programming Sequence</h4>
+                                            <p id = "firstParagraph" class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer rutrum, urna eu pellentesque </p>
                                         </div>
 
                                     </div>
@@ -792,6 +794,11 @@
             }
             function open_engineering() {
 
+               document.getElementById("firstCard").style.background ="#fff";
+               document.getElementById("firstTitle").style.color ="#633991";
+               document.getElementById("firstParagraph").style.color ="#000";
+
+
                 document.getElementById('timeline-section-title').innerHTML = "Engineering Sequence";
 
                 document.getElementById('timeline-card-title1').innerHTML = "Principles of Engineering";
@@ -813,6 +820,10 @@
 
             }
             function open_management() {
+
+                   document.getElementById("firstCard").style.background ="#fff";
+               document.getElementById("firstTitle").style.color ="#633991";
+               document.getElementById("firstParagraph").style.color ="#000";
 
                 document.getElementById('timeline-section-title').innerHTML = "Management Sequence";
 
@@ -837,6 +848,10 @@
             }
             function open_digitalMedia() {
 
+                   document.getElementById("firstCard").style.background ="#fff";
+               document.getElementById("firstTitle").style.color ="#633991";
+               document.getElementById("firstParagraph").style.color ="#000";
+
                 document.getElementById('timeline-section-title').innerHTML = "Digital Media Sequence";
 
                 document.getElementById('timeline-card-title1').innerHTML = "TV Production";
@@ -859,6 +874,10 @@
             }
             function open_design() {
 
+                   document.getElementById("firstCard").style.background ="#fff";
+               document.getElementById("firstTitle").style.color ="#633991";
+               document.getElementById("firstParagraph").style.color ="#000";
+
                 document.getElementById('timeline-section-title').innerHTML = "Design Sequence";
 
                 document.getElementById('timeline-card-title1').innerHTML = "Computer Art & Design";
@@ -880,6 +899,10 @@
 
             }
             function open_economics() {
+
+                   document.getElementById("firstCard").style.background ="#fff";
+               document.getElementById("firstTitle").style.color ="#633991";
+               document.getElementById("firstParagraph").style.color ="#000";
 
                 document.getElementById('timeline-section-title').innerHTML = "Economics Sequence";
 
