--- a/about2.html
+++ b/about2.html
@@ -68,7 +68,7 @@
             <header class="info">
                 <hgroup class="about">
                     <div class="typewriter">
-                        <h1>About Us</h1>
+                        <h1>About Us 2</h1>
                     </div>
                 </hgroup>
             </header>
