--- a/about2.html
+++ b/about2.html
@@ -233,6 +233,38 @@
             };
 
         </script>
+        <div class="section bg-white" id="research">
+        <div class="container">
+            <div class="row">
+                <div class="col-xl-10 col-lg-12 mx-auto">
+                    <h3 class="section-heading mb-4">
+                       LEAP Resume
+                       <a href="#demo" class="btn btn-primary" style="float:right">View Resume</a>
+
+                    </h3>
+
+                </div>
+            </div>
+        </div>
+    </div>
+         <!-- 
+Who We Are beginning
+-->
+        <div class="section" id="who_we_are">
+            <div class="container">
+                <div class="row">
+                    <div class="col-xl-10 col-lg-12 mx-auto">
+                        <h3 class="section-heading mb-4 text-white">
+                            Research Sources
+                        </h3>
+                        <p class = "text-white">We are WWP High School North’s TSA club, competing in the school’s first TSA season. The officers of the club observed the impact of TSA on the surrounding communities, and decided to bring the opportunity to the students of West Windsor and Plainsboro.
+                        </p>
+                        <p class = "text-white">Despite the lengthy process of getting the club approved in the school, the officers stayed persistent and were able to establish the club in school before the September of 2017. The club was founded with enough time to publicly introduce the club at the school club fair, in which students from the school get a glimpse of the club’s mission and are able to directly join the club. Currently the club has recruited 66 loyal members, and plans to expand by next year.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Who We Are closing-->
         <!-- 
 What is TSA beginning
 -->
@@ -241,7 +273,7 @@ What is TSA beginning
                 <div class="row">
                     <div class="col-xl-10 col-lg-12 mx-auto">
                         <h3 class="section-heading mb-4">
-                            What is TSA
+                            Media Sources
                         </h3>
                         <p>TSA (Technology Student Association) is a national organization dedicated to helping students create a better future in the Mathematics and Technology fields. The organization uses its yearly set of competitions to test the abilities of the students competing in the event. As well as proving their expansive knowledge, the members are able to represent their school and community when competing for 1st place. </p>
                         <p>The TSA motto “Learning to lead in a technical world” is precisely what the organization is working towards, as the club has opened branches in 48 of the 50 states. The overall mission of TSA is to have the members of the club learn and develop their skills in the STEM department and to eventually implement them on solutions towards the world’s concerning international problems.</p>
@@ -260,7 +292,7 @@ Who We Are beginning
                 <div class="row">
                     <div class="col-xl-10 col-lg-12 mx-auto">
                         <h3 class="section-heading mb-4 text-white">
-                            Who We Are
+                            Frameworks
                         </h3>
                         <p class = "text-white">We are WWP High School North’s TSA club, competing in the school’s first TSA season. The officers of the club observed the impact of TSA on the surrounding communities, and decided to bring the opportunity to the students of West Windsor and Plainsboro.
                         </p>
@@ -270,6 +302,25 @@ Who We Are beginning
             </div>
         </div>
         <!-- Who We Are closing-->
+        <!-- 
+What is TSA beginning
+-->
+        <div class="section bg-white" id="what_is_tsa">
+            <div class="container">
+                <div class="row">
+                    <div class="col-xl-10 col-lg-12 mx-auto">
+                        <h3 class="section-heading mb-4">
+                            Tools
+                        </h3>
+                        <p>TSA (Technology Student Association) is a national organization dedicated to helping students create a better future in the Mathematics and Technology fields. The organization uses its yearly set of competitions to test the abilities of the students competing in the event. As well as proving their expansive knowledge, the members are able to represent their school and community when competing for 1st place. </p>
+                        <p>The TSA motto “Learning to lead in a technical world” is precisely what the organization is working towards, as the club has opened branches in 48 of the 50 states. The overall mission of TSA is to have the members of the club learn and develop their skills in the STEM department and to eventually implement them on solutions towards the world’s concerning international problems.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- 
+What is TSA closing
+-->
         <script src='https://cdnjs.cloudflare.com/ajax/libs/vue/2.5.3/vue.min.js'></script>
         <script  src="js/competitions.js"></script>
         <footer class="my-5 text-center">
