meet your virtual tutor

--- a/design-brief.html
+++ b/design-brief.html
@@ -85,6 +85,7 @@
                 </div>
             </div>
         </div>
+<!--
         <header class="bg-gradient2"id="home">
             <div class = "backgrounddiv3">
                 <div id="container">
@@ -100,6 +101,21 @@
 
                     </header>
                 </div>
+            </div>
+        </header>
+-->
+        <header class="bg-gradient2"id="home">
+            <div class = "backgrounddiv3">
+            <div id="container">
+            <header class="info infoheightchange">
+                <img src="./img/aida-logo.png" alt="Smiley face" height="102" width="102" class = "logopadding">
+                <hgroup class="about">
+                    <div class="typewriter">
+                        <h1>Meet your virtual tutor</h1>
+                    </div>
+                </hgroup>
+            </header>
+            </div>
             </div>
         </header>
 
