--- a/design-brief.html
+++ b/design-brief.html
@@ -69,12 +69,12 @@
                             <div class="collapse navbar-collapse" id="navbar">
                                 <ul class="navbar-nav ml-auto">
                                     <li class="nav-item"> <a class="nav-link active" href="#home">HOME <span class="sr-only">(current)</span></a> </li>
-                                    <li class="nav-item"> <a class="nav-link" href="#what_is_tsa">GENERAL</a> </li>
-                                    <li class="nav-item"> <a class="nav-link" href="#what_is_tsa">DEMO</a> </li>
-                                    <li class="nav-item"> <a class="nav-link" href="#who_we_are">USES</a> </li>
-                                    <li class="nav-item"> <a class="nav-link" href="#activities">COSTS</a> </li>
-                                    <li class="nav-item"> <a class="nav-link" href="#student_projects">TECHNOLOGIES</a> </li>
-                                    <li class="nav-item"> <a class="nav-link" href="#student_projects">SAFETY</a> </li>
+                                    <li class="nav-item"> <a class="nav-link" href="#general">GENERAL</a> </li>
+                                    <li class="nav-item"> <a class="nav-link" href="#demo">DEMO</a> </li>
+                                    <li class="nav-item"> <a class="nav-link" href="#uses">USES</a> </li>
+                                    <li class="nav-item"> <a class="nav-link" href="#costs">COSTS</a> </li>
+                                    <li class="nav-item"> <a class="nav-link" href="#technologies">TECHNOLOGIES</a> </li>
+                                    <li class="nav-item"> <a class="nav-link" href="#safety">SAFETY</a> </li>
                                     <li class="nav-item"><a href="./index.html#home" class="btn btn-outline-light my-3 my-sm-0 ml-lg-3">CTE</a></li>
                                     <li class="nav-item"><a href="./tsa-chapter.html" class="btn btn-outline-light my-3 my-sm-0 ml-lg-3">TSA Chapter</a></li>
                                     <li class="nav-item"><a href="./tsa-chapter.html" class="btn btn-outline-light my-3 my-sm-0 ml-lg-3">About</a></li>
@@ -265,7 +265,7 @@
 
         </script>
 
-        <div class="section bg-white" id="what_is_tsa">
+        <div class="section bg-white" id="general">
             <div class="container">
                 <div class="row">
                     <div class="col-xl-12 col-lg-12 mx-auto">
@@ -343,7 +343,7 @@
 
         <!-- competitions open  -->
         <div class = "section2 light-bg">
-            <div class="section-title" id = "competitions">
+            <div class="section-title" id = "uses">
                 <h3 >General Uses of AI</h3>
             </div>
             <div class="app" id="app">
@@ -464,7 +464,7 @@
 
         </div>
 
-        <div class="section light2-bg" id="pricing">
+        <div class="section light2-bg" id="costs">
             <div class="container">
                 <div class="section-title">
                     <small>PRICING</small>
@@ -541,7 +541,7 @@
 
 
         </div>
-        <div class="main-wrapper">
+        <div class="main-wrapper" id="technologies">
             <!-- Start Feature Area -->
 
             <section class="featured-area">
@@ -676,7 +676,7 @@
         </div>
 
 
-        <div class="section">
+        <div class="section" id="safety">
 
             <div class="container">
                 <div class="section3-title">
@@ -727,11 +727,14 @@
 
         <script type ="text/javascript" src="js/competitions.js"> </script>
 
+        <script src='https://cdn.jsdelivr.net/vue/latest/vue.min.js'></script>
+        <script src='js/botui.min.js'></script>
+        <script  src="js/bot.js"></script>
+
+    
+
+    
+
     </body>
-    <script src='https://cdn.jsdelivr.net/vue/latest/vue.min.js'></script>
-    <script src='js/botui.min.js'></script>
-
-
-
-    <script  src="./js/bot.js"></script>
+  
 </html>
