--- a/tsa-chapter.html
+++ b/tsa-chapter.html
@@ -364,8 +364,10 @@ Who We Are beginning
                             <h3 class = "text-white">Biotechnology Design</h3>
                             <br>
                             <div class = "row">
-                                <blockquote class="blockquote text-white col col-lg-7">One of the events our club is competing in is the Biotechnology Design. The event’s topic is Food, leading the group of students to focus on a biological disease that is killing a huge proportion of food in Eastern Africa. Their solution: Find a bacteria to reverse the effect of MLND, the disease affecting the crops, on the DNA of the crop. This event focuses on solutions to the growing food epidemic across different parts of the world, and how new technology can help to reverse the problem and provide support to the people around the world experiencing the dilemma.
+                                <div class = "bqcontainer col col-lg-7">
+                                <blockquote class="blockquote text-white">One of the events our club is competing in is the Biotechnology Design. The event’s topic is Food, leading the group of students to focus on a biological disease that is killing a huge proportion of food in Eastern Africa. Their solution: Find a bacteria to reverse the effect of MLND, the disease affecting the crops, on the DNA of the crop. This event focuses on solutions to the growing food epidemic across different parts of the world, and how new technology can help to reverse the problem and provide support to the people around the world experiencing the dilemma.
                                 </blockquote>
+                                </div>
                                 <img  class = "col col-lg-5" style="height:280px; width:auto;" src = "./img/biotechnology.jpg">
                             </div>
                         </div>
@@ -373,8 +375,10 @@ Who We Are beginning
                             <h3 class = "text-white">Video Game Design</h3>
                             <br>
                             <div class = "row">
-                            <blockquote class="blockquote text-white col col-lg-7">The video game design group was challenged to create a sports theme game. They used the Unity engine to create a car racing game.
+                            <div class = "bqcontainer col col-lg-7">
+                            <blockquote class="blockquote text-white">The video game design group was challenged to create a sports theme game. They used the Unity engine to create a car racing game.
                             </blockquote>
+                            </div>
                             <img class = "col col-lg-5" style="height:280px; width:auto;"  src = "./img/videogame.jpg">
                             </div>
                         </div>
@@ -382,9 +386,11 @@ Who We Are beginning
                             <h3 class = "text-white">Children's Stories</h3>
                             <br>
                             <div class="row">
-                            <blockquote class="blockquote text-white col col-lg-7">
+                            <div class = "bqcontainer col col-lg-7">
+                            <blockquote class="blockquote text-white">
                             This year, the challenge for TSA's Children Stories event was to create an electronically enhanced storybook. This team took this challenge head on.
                             </blockquote>
+                                </div>
                                 <img class = "col col-lg-5" style="height:280px; width:auto;"  src = "./img/childrens-stories.jpg">
                         </div>
                             </div>
@@ -392,9 +398,11 @@ Who We Are beginning
                                     <h3 class = "text-white">Digital Video Production</h3>
                                     <br>
                                     <div class = "row">
-                                    <blockquote class="blockquote text-white col col-lg-7">
+                                    <div class = "bqcontainer col col-lg-7">
+                                    <blockquote class="blockquote text-white">
                                         This group created an informercial for the TSA Children's Stories event. They incorporated VFX to complement their cinematography.
                                     </blockquote>
+                                        </div>
                                     <img class = "col col-lg-5" style="height:280px;width:auto;"  src = "./img/digital-production.jpg">
                                     </div>
                                 </div>
