--- a/about.html
+++ b/about.html
@@ -46,14 +46,14 @@
                             <div class="collapse navbar-collapse" id="navbar">
                                 <ul class="navbar-nav ml-auto">
                                     <li class="nav-item"> <a class="nav-link active" href="#home">HOME <span class="sr-only">(current)</span></a> </li>
-                                    <li class="nav-item"> <a class="nav-link" href="#what_is_tsa">ABOUT</a> </li>
-                                    <li class="nav-item"> <a class="nav-link" href="#activities">ACTIVITIES</a> </li>
-                                    <li class="nav-item"> <a class="nav-link" href="#student_projects">PROJECTS</a> </li>
-                                    <li class="nav-item"> <a class="nav-link" href="#officers">OFFICERS</a> </li>
-                                    <li class="nav-item"> <a class="nav-link" href="#competitions">COMPETITIONS</a> </li>
+                                    <li class="nav-item"> <a class="nav-link" href="#leap">LEAP</a> </li>
+                                    <li class="nav-item"> <a class="nav-link" href="#research">RESEARCH</a> </li>
+                                    <li class="nav-item"> <a class="nav-link" href="#media">MEDIA</a> </li>
+                                    <li class="nav-item"> <a class="nav-link" href="#frameworks">FRAMEWORKS</a> </li>
+                                    <li class="nav-item"> <a class="nav-link" href="#tools">TOOLS</a> </li>
                                     <li class="nav-item"><a href="./index.html#home" class="btn btn-outline-light my-3 my-sm-0 ml-lg-3">CTE</a></li>
                                     <li class="nav-item"><a href="./design-brief.html" class="btn btn-outline-light my-3 my-sm-0 ml-lg-3">DESIGN BRIEF</a></li>
-                                    <li class="nav-item"><a href="./about.html" class="btn btn-outline-light my-3 my-sm-0 ml-lg-3">ABOUT</a></li>
+                                    <li class="nav-item"><a href="./tsa-chapter.html" class="btn btn-outline-light my-3 my-sm-0 ml-lg-3">CHAPTER</a></li>
 
                                 </ul>
                             </div>
@@ -233,7 +233,7 @@
             };
 
         </script>
-        <div class="section bg-white" id="research">
+        <div class="section bg-white" id="leap">
         <div class="container">
             <div class="row">
                 <div class="col-xl-10 col-lg-12 mx-auto">
@@ -250,7 +250,7 @@
          <!-- 
 Who We Are beginning
 -->
-        <div class="section" id="who_we_are">
+        <div class="section" id="research">
             <div class="container">
                 <div class="row">
                     <div class="col-xl-10 col-lg-12 mx-auto">
@@ -268,7 +268,7 @@ Who We Are beginning
         <!-- 
 What is TSA beginning
 -->
-        <div class="section bg-white" id="what_is_tsa">
+        <div class="section bg-white" id="media">
             <div class="container">
                 <div class="row">
                     <div class="col-xl-10 col-lg-12 mx-auto">
@@ -287,7 +287,7 @@ What is TSA closing
         <!-- 
 Who We Are beginning
 -->
-        <div class="section" id="who_we_are">
+        <div class="section" id="frameworks">
             <div class="container">
                 <div class="row">
                     <div class="col-xl-10 col-lg-12 mx-auto">
@@ -305,7 +305,7 @@ Who We Are beginning
         <!-- 
 What is TSA beginning
 -->
-        <div class="section bg-white" id="what_is_tsa">
+        <div class="section bg-white" id="tools">
             <div class="container">
                 <div class="row">
                     <div class="col-xl-10 col-lg-12 mx-auto">
@@ -324,13 +324,11 @@ What is TSA closing
         <script src='https://cdnjs.cloudflare.com/ajax/libs/vue/2.5.3/vue.min.js'></script>
         <script  src="js/competitions.js"></script>
         <footer class="my-5 text-center">
-            <p class="mb-2"><small>COPYRIGHT © 2018. ALL RIGHTS RESERVED. SAHIT PENMATCHA</small></p>
-
-            <small>
-                <a href="#" class="m-2">PRESS</a>
-                <a href="#" class="m-2">TERMS</a>
-                <a href="#" class="m-2">PRIVACY</a>
-            </small>
+                <small>
+                        <a href="" style="text-decoration:none" class="m-2">Webmaster Team 2201-1</a>
+                        <br>
+                        <a href="" style="text-decoration:none" class="m-2">COPYRIGHT © 2018. West Windsor Plainsboro High School North TSA</a>
+                    </small>
         </footer>
 
     </body>
