--- a/tsa-chapter.html
+++ b/tsa-chapter.html
@@ -303,6 +303,12 @@ Who We Are beginning
                                 <p> 
                                     To keep all students in tact with their TSA event, the club runs weekly meetings to regroup the teams and update each other on any group progress. The club officers begin the meetings with recaps on competition dates, lab safety training sessions, and general announcements. Throughout the meetings, students in each event regroup to share their personal progress on the project, as well as to collaborate on plans for the upcoming competitions.
                                 </p>
+                                <div>
+                                        <img style="width:auto; height:350px"src="img/weeklymeetings1.JPG"/>
+                                        <img style=" width:auto; height:350px" src="img/weeklymeetings2.JPG"/>
+                                </div>
+                             
+
                             </div>
                         </div>
                     </div>
@@ -313,9 +319,13 @@ Who We Are beginning
                                 <h4>Club Fair</h4>
                                 <p>Club fair is a school program in which each club has a chance to showcase the main message of the club, and can directly recruit members by recording their names and contact information. The TSA club of High School North was able to gain 66 loyal members through that short fair, and hopefully will be able to expand on that number by next year’s fair.
                                 </p>
-                                <h4>Lab Safety Quiz</h4>
+                                <h4>Lab Safety Training</h4>
                                 <p> The lab safety training is a TSA school club program that teaches each student the different technology available to them. Once they finish the lesson, they have 3 chances to pass a quiz on the lab information. The quiz is to ensure that everyone who goes into the lab room, has enough experience and knowledge to keep themselves injury free before the end of the season. If the student passes the quiz, they will have extensive use to all the lab’s materials and if necessary, has the help of Mr. Ianneli, the teacher advisor the the club.
                                 </p>
+                                <div>
+                                        <img style="width:auto; height:250px"src="img/lab1.png"/>
+                                        <img style="width:auto; height:250px" src="img/lab2.png"/>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -326,6 +336,11 @@ Who We Are beginning
                                 <h4>Guest Speakers</h4>
                                 <p>In order to inspire the students and provide a real life example, the president of the club asked for a couple guests to speak to the club’s members. The guests were the school’s robotics team, who have won state competitions through hard work and determination. The purpose of the lesson was to explain the importance of developing your abilities in the STEM fields, thus preparing students with enough knowledge to compete for career opportunities that contain skills that you have previously used in TSA.
                                 </p>
+                                <div>
+                                        <img style="width:auto; height:280px"src="img/guest1.jpeg"/>
+                                        <img style="width:auto; height:280px" src="img/guest2.JPG"/>
+                                </div>
+                                <br>
                                 <h4>Party</h4>
                                 <p> As work stricken as the weeks may be, the club ensures to decrease the amount of stress on the students. The students took part in a small party at one of the meetings before the groups started the implementation of their projects. The party became a quick success as all the members of the club had brought different items to contribute to the party, and were able to enjoy themselves and each other's company.
                                 </p>
@@ -339,11 +354,16 @@ Who We Are beginning
                                 <h4>Project Code</h4>
                                 <p>One way in which TSA becomes a bigger part of the community is how it reaches its members out to different areas to provide inspiration of the club, and to implement the mission of TSA. In Project Code, an organization dedicated to providing children with a chance to get a head start on the basics of computer languages. The TSA club president and a couple of the members have dedicated multiple hours to promote Project Code in Monroe, and Hamilton.
                                 </p>
+                                <div>
+                                        <img style="width:auto; height:350px"src="img/projectcode1.JPG"/>
+                                        <img style="width:auto; height:350px" src="img/projectcode2.JPG"/>
+                                </div>
+                                <br>
                                 <h4>Innovation Fair</h4>
                                 <p> 
                                     Another way the TSA club helps to promote the TSA motto is by encouraging its own school members to compete in local events. The Innovation Fair in West Windsor-Plainsboro is a public community fair where students from different schools, and ideas come to display their potentially innovative projects. By having our members work towards this fair, the club is able to promote technological advancements in the STEM fields, while also advocating for TSA’s mission.
-
                                 </p>
+
                             </div>
                         </div>
                     </div>
@@ -602,13 +622,11 @@ Who We Are beginning
         <script src='https://cdnjs.cloudflare.com/ajax/libs/vue/2.5.3/vue.min.js'></script>
         <script  src="js/competitions.js"></script>
         <footer class="my-5 text-center">
-            <p class="mb-2"><small>COPYRIGHT © 2018. ALL RIGHTS RESERVED. SAHIT PENMATCHA</small></p>
-
-            <small>
-                <a href="#" class="m-2">PRESS</a>
-                <a href="#" class="m-2">TERMS</a>
-                <a href="#" class="m-2">PRIVACY</a>
-            </small>
+                <small>
+                        <a href="" style="text-decoration:none" class="m-2">Webmaster Team 2201-1</a>
+                        <br>
+                        <a href="" style="text-decoration:none" class="m-2">COPYRIGHT © 2018. West Windsor Plainsboro High School North TSA</a>
+                    </small>
         </footer>
 
     </body>
