--- a/index.html
+++ b/index.html
@@ -540,40 +540,7 @@
 
 
 
-        <div class="section white-bg" id="student_projects">
-            <div class="section">
-                <div class="container">
-                    <div class="section-title">
-                        <small>STUDENT PROJECTS</small>
-                        <h3>Project Title</h3>
-                    </div>
-
-                    <div class="testimonials owl-carousel">
-                        <div class="testimonials-single">
-                            <img src="images/client.png" alt="client" class="client-img">
-                            <blockquote class="blockquote">Uniquely streamline highly efficient scenarios and 24/7 initiatives. Conveniently embrace multifunctional ideas through proactive customer service. Distinctively conceptualize 2.0 intellectual capital via user-centric partnerships.</blockquote>
-                            <h5 class="mt-4 mb-2">Crystal Gordon</h5>
-                            <p class="text-primary">United States</p>
-                        </div>
-                        <div class="testimonials-single">
-                            <img src="images/client.png" alt="client" class="client-img">
-                            <blockquote class="blockquote">Uniquely streamline highly efficient scenarios and 24/7 initiatives. Conveniently embrace multifunctional ideas through proactive customer service. Distinctively conceptualize 2.0 intellectual capital via user-centric partnerships.</blockquote>
-                            <h5 class="mt-4 mb-2">Crystal Gordon</h5>
-                            <p class="text-primary">United States</p>
-                        </div>
-                        <div class="testimonials-single">
-                            <img src="images/client.png" alt="client" class="client-img">
-                            <blockquote class="blockquote">Uniquely streamline highly efficient scenarios and 24/7 initiatives. Conveniently embrace multifunctional ideas through proactive customer service. Distinctively conceptualize 2.0 intellectual capital via user-centric partnerships.</blockquote>
-                            <h5 class="mt-4 mb-2">Crystal Gordon</h5>
-                            <p class="text-primary">United States</p>
-                        </div>
-                    </div>
-
-                </div>
-
-            </div>
-        </div>
-
+       
         <script src="./js/sketch.js"></script>
         <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
         <script  src="./js/timeline.js"></script>
@@ -929,13 +896,11 @@
         <div class="section light-bg" id="student_projects">
 
             <footer class="my-5 text-center">
-                <p class="mb-2"><small>COPYRIGHT © 2018. ALL RIGHTS RESERVED. HSN TSA </small></p>
-
-                <small>
-                    <a href="#" class="m-2">PRESS</a>
-                    <a href="#" class="m-2">TERMS</a>
-                    <a href="#" class="m-2">PRIVACY</a>
-                </small>
+                    <small>
+                            <a href="" style="text-decoration:none" class="m-2">Webmaster Team 2201-1</a>
+                            <br>
+                            <a href="" style="text-decoration:none" class="m-2">COPYRIGHT © 2018. West Windsor Plainsboro High School North TSA</a>
+                        </small>
             </footer>
 
         </div>
