--- a/tsa-chapter.html
+++ b/tsa-chapter.html
@@ -336,7 +336,7 @@ Who We Are beginning
                                 <h4>Guest Speakers</h4>
                                 <p>In order to inspire the students and provide a real life example, the president of the club asked for a couple guests to speak to the club’s members. The guests were the school’s robotics team, who have won state competitions through hard work and determination. The purpose of the lesson was to explain the importance of developing your abilities in the STEM fields, thus preparing students with enough knowledge to compete for career opportunities that contain skills that you have previously used in TSA.
                                 </p>
-                                <div>
+                               <div>
                                         <img style="width:auto; height:280px"src="img/guest1.jpeg"/>
                                         <img style="width:auto; height:280px" src="img/guest2.JPG"/>
                                 </div>
@@ -355,9 +355,10 @@ Who We Are beginning
                                 <p>One way in which TSA becomes a bigger part of the community is how it reaches its members out to different areas to provide inspiration of the club, and to implement the mission of TSA. In Project Code, an organization dedicated to providing children with a chance to get a head start on the basics of computer languages. The TSA club president and a couple of the members have dedicated multiple hours to promote Project Code in Monroe, and Hamilton.
                                 </p>
                                 <div>
-                                        <img style="width:auto; height:350px"src="img/projectcode1.JPG"/>
-                                        <img style="width:auto; height:350px" src="img/projectcode2.JPG"/>
+                                        <img style="width:auto; height:350px"src="img/projectcode1.jpg"/>
+                                        <img style="width:auto; height:350px" src="img/projectcode2.jpg"/>
                                 </div>
+
                                 <br>
                                 <h4>Innovation Fair</h4>
                                 <p> 
