--- a/design-brief.html
+++ b/design-brief.html
@@ -483,47 +483,16 @@
         <div class="section light2-bg" id="costs">
             <div class="container">
                 <div class="section-title">
-                    <small>COSTS</small>
-                    <h3>Upgrade to Pro</h3>
+                    <h3>Our Pricing</h3>
                 </div>
-
-                <div class="card-deck">
-                <div style="width:100%">
-                    <div class="card pricing popular">
-                        <div class="card-head">
-                            <small class="text-primary">FOR TEAMS</small>
-                            <span class="price">$29<sub>/m</sub></span>
-                        </div>
-                        <ul class="list-group list-group-flush">
-                            <div class="list-group-item">Unlimited Projects</div>
-                            <div class="list-group-item">100 GB Storage</div>
-                            <div class="list-group-item">Priority Support</div>
-                            <div class="list-group-item">Collaboration</div>
-                            <div class="list-group-item">Reports and analytics</div>
-                        </ul>
-                        <div class="card-body">
-                            <a href="#" class="btn btn-primary btn-lg btn-block">Choose this Plan</a>
-                        </div>
+                <h1 class = "text-center webblue">$12/Month</h1>
+                <div class="row">
+                    <div class="container white-bg costscontainer">
+                    <div class="col-xl-10 col-lg-12 mx-auto">
+                        <p class = "text-center">We charge a flat monthly fee of $12 because we believe our users should be offered the same benefits for a low price. We want everyone to have the opportunity to learn and an affordable flat rate is the best way to do so. With this monthly payment, we can manage our costs and spread knowledge among our users.</p>
                     </div>
-          
-                    <div class="card pricing">
-                        <div class="card-head">
-                            <small class="text-primary">ENTERPRISE</small>
-                            <span class="price">$249<sub>/m</sub></span>
-                        </div>
-                        <ul class="list-group list-group-flush">
-                            <div class="list-group-item">Unlimited Projects</div>
-                            <div class="list-group-item">Unlimited Storage</div>
-                            <div class="list-group-item">Collaboration</div>
-                            <div class="list-group-item">Reports and analytics</div>
-                            <div class="list-group-item">Web hooks</div>
-                        </ul>
-                        <div class="card-body">
-                            <a href="#" class="btn btn-primary btn-lg btn-block">Choose this Plan</a>
-                        </div>
                     </div>
-                </div>
-                </div>
+            </div>
             </div>
         </div>
         <div class="main-wrapper" id="technologies">
