--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
                                     <li class="nav-item"> <a class="nav-link" href="#student_projects">STUDENT PROJECTS</a> </li>
                                     <li class="nav-item"><a href="./tsa-chapter.html" class="btn btn-outline-light my-3 my-sm-0 ml-lg-3">TSA CHAPTER</a></li>
                                     <li class="nav-item"><a href="./design-brief.html" class="btn btn-outline-light my-3 my-sm-0 ml-lg-3">DESIGN BRIEF</a></li>
+                                    <li class="nav-item"><a href="./about.html" class="btn btn-outline-light my-3 my-sm-0 ml-lg-3">ABOUT</a></li>
                                 </ul>
                             </div>
                         </nav>
