--- a/design-brief.html
+++ b/design-brief.html
@@ -539,7 +539,7 @@
                             <div class="single-feature text-center">
                                 <span class="lnr lnr-screen"></span>
                                 <h3>IBM Watson</h3>
-                                <p>Here, I focus on a range of items and features that we use in life without giving them a second thought such as Coca Cola.</p>
+                                <p>IBM’s Watson technology uses natural language processing and deep learning, branches of machine learning, to extract metadata and sentiment from text.</p>
                                 <!-- Begin Modal -->
                                 <script>
                                     $('#watsonmodal').on('shown.bs.modal', function () {
@@ -548,7 +548,7 @@
                                 </script>
                                 <!-- Button trigger modal -->
                                 <button type="button" id = "watsonbutton" class="btn btn-primary" data-toggle="modal" data-target="#watsonmodal">
-                                    Learn Details
+                                    More Details
                                 </button>
 
                                 <!-- Modal -->
@@ -564,10 +564,13 @@
                                                           </div>
                                                           <div class="modal-body">
                                                                 <h5>Creation</h5>
-                                                                <p>This triggers a popover on click.</p>
+                                                                <p style="text-align:justify">The development of Watson began in 2004 when IBM Research manager Charles Lickel challenged the company to create a system capable of playing Jeopardy. Over the next two years, Watson was trained with 500 clues from past runs of the TV shows. However, when initial tests ran in 2006, Watson responded correctly only 15% of the time. At this point, the team delegated more staff to solving these problems, and in 2011, Watson made its appearance on Jeopardy, beating champions Brad Rutter and Ken Jennings and winning the $1 million prize.</p>
                                                                 <hr>
                                                                 <h5>Purpose</h5>
-                                                                <p> have tooltips on hover.</p>
+                                                                <p style="text-align:justify"> Although Watson was initially developed for Jeopardy!, the tool has expanded to a variety of different purposes. It is currently used in healthcare to help physicians in hospitals treat their patients by creating treatment recommendation through the analysis of stored patient medical data.
+
+                                                                        Watson has also partnered with Pearson Education to create electronic storybooks that can tutor children in reading material. The technology is now even capable of weather forecasting using data from 200,000 weather stations.
+                                                                        </p>
                                                                 <hr>
                                                                 <h5>Limitations</h5>
                                                                 <p> have tooltips on hover.</p>
@@ -595,7 +598,7 @@
                                 </script>
                                 <!-- Button trigger modal -->
                                 <button type="button" id = "siributton" class="btn btn-primary" data-toggle="modal" data-target="#sirimodal">
-                                    Learn Details
+                                    More Details
                                 </button>
 
                                 <!-- Modal -->
@@ -642,7 +645,7 @@
                                 </script>
                                 <!-- Button trigger modal -->
                                 <button type="button" id = "aidabutton" class="btn btn-primary" data-toggle="modal" data-target="#aidamodal">
-                                    Learn Details
+                                    More Details
                                 </button>
 
                                 <!-- Modal -->
